# torchvision_ops

./: .gitignore  CMakeLists.txt  README.md  vision.cpp
win_proj/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  detect_cuda_compute_capabilities.cpp  detect_cuda_version.cc  visionop.sln  visionop.vcxproj  visionop.vcxproj.filters
